--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     /* box-shadow: 0 0px 10px 2px #CECECE; */
 }
 
+.nav-link {
+    color: #5048A8;
+}
+
 /* Kwadarty z notatkami */
 .main_notes {
     box-shadow: 0px 0px 10px 2px #CECECE;
@@ -21,27 +25,30 @@
     color: black;
 }
 
-.fa-plus:before {
+.fa-plus {
     font-size: 2rem;
-    
+    color: #5048A8;
 }
 
-
-
-.img-plus {
-    /* max-width: 20%; */
-}
 
 /* zmiana kolorów akordeonu */
+.accordion-button {
+    font-size: 1.3rem;
+    font-weight: bold;
+}
+
 .accordion-button:not(.collapsed) {
-    color: black;
-    background-color: #e6e6e69c;
+    color: #5048A8;
+    font-size: 1.3rem;
+    background-color: #f3f3f4;
+    /* background-color: #e6e6e69c; */
 }
 
 /* Menu na stronie głównej */
 
 .all_fields {
     height: 90vh;
+    border-color: #f3f3f4;
 }
 
 .search_field {
@@ -71,8 +78,9 @@
 }
 
 .menu_panel {
-    background-color: #e6e6e6;
+    background-color: #f3f3f4;
     height: 100vh;
+    border-color: #f3f3f4;
 }
 
 .notes_panel {
@@ -80,4 +88,29 @@
     border-radius: 10px;
     height: 85%;
     box-shadow: 0px 0px 10px 2px #CECECE;
+}
+
+/* notatki simple */
+.form-control {
+    border: 1px solid #ced4da;
+}
+
+.form-control:focus {
+    color: #212529;
+    background-color: #fff;
+    border-color: #5048A8;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgb(43 39 91 / 36%);
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #5048A8;
+    border-color: #5048A8;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #2B275B;
+    border-color: #2B275B;
 }
